- remove Message() (replace it with span elements, and changing the .innerText) - fix: the entry's message not aligned when changing the title height

--- a/style.css
+++ b/style.css
@@ -132,6 +132,11 @@
     margin-left: 150px;
     }
 
+.CountUp-entryMessage, .CountDown-entryMessage
+    {
+    margin-left: 10px;
+    }
+
 
 .CountUp-remove, .CountDown-remove
     {
@@ -185,12 +190,6 @@
 .watch-finished
     {
     background-color: rgba(188, 0, 0, 0.15);
-    }
-
-
-.Message
-    {
-    position: absolute;
     }
 
 
